# kitt

./: .gitignore  README.md  docker-compose.dev.yml  main.py
backend/: pyproject.toml
backend/api/: admin.py  analytics.py  database.py  etfbook_primary.py  main.py  model.py  referential.py  schema.py  utils.py
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: axiosAPI.js
frontend/src/lib/components/: Header.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.js  +page.svelte
frontend/src/routes/admin/new/: +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/analytics/annualized-volatility/: +page.svelte
frontend/src/routes/analytics/arithmetic-return/: +page.svelte
frontend/src/routes/analytics/cumulative-return/: +page.svelte
frontend/src/routes/analytics/drawdowns/: +page.svelte
frontend/src/routes/analytics/perf/: +page.svelte
frontend/src/routes/analytics/var-es/: +page.svelte
frontend/src/routes/referential/: +page.svelte
frontend/src/routes/referential/etfbook/: +page.svelte
frontend/src/routes/referential/etfbook/[isin]/: +page.svelte
frontend/src/routes/referential/yahoo/: +page.js
notebooks/: analytics.ipynb  static_data.ipynb
