[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.0.0",
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "yfinance>=1.1.0",
]
